2012-01-23  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm, server-src/amlabel.pl:use the
	  block_size instead of the header-block_size to write the BLOCK_SIZE
	  in the tapelist.

2012-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Add support for openstack swift api.
	* device-src/s3.c: Add support for openstack swift api.
	* device-src/s3.h: Add support for openstack swift api.
	* man/xml-source/amanda-devices.7.xml: Add openstack-swift-api
	  property.

2012-01-13  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Fix deleting files.

2012-01-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl: Fix amtape show for non numeric slot.

2012-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Fix for compilation on AIX.

2012-01-04 Dan Locks <dwlocks@zmanda.com>
	*  packaging/sun-pkg/buildpkg: Add GLIB_* flags to sun packages
	*  config/amanda/libs.m4: fix "exit when explicit flags are given"
	   error, and require all flags when one is given.

2012-01-03  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Report DEVICE ERROR if s3_is_bucket_exists
	  response with curl error CURLE_COULDNT_CONNECT or
	  CURLE_COULDNT_RESOLVE_HOST.

2012-01-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm: Print the state filename to the debug
	  file.

2012-01-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/ScanInventory.pm: Correctly set 'err'.
	* server-src/amtape.pl: quit the changer even on error.

2011-12-24  Dustin J. Mitchell <dustin@mozilla.com>
	Patch by Nathan Stratton Treadway.
	* man/xml-source/amgetconf.8.xml: a typo in the amgetconf.8 man page

2011-12-24  Dustin J. Mitchell <dustin@mozilla.com>
	Patch by Nathan Stratton Treadway.
	* common-src/conffile.c: minor problem with an error message in
	  conffile.c, this time in the read_confline() function.  It's just a